2016-06-11 Hanna Knutsson <hanna_k@fmgirl.com>

	Show actual number of days since last exchange rates update

2016-06-10 Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix localization of command line arguments

2016-06-09 Hanna Knutsson <hanna_k@fmgirl.com>

	* Improve exchange rates handling
	* Add interactive command line option to qalc. Exit after commands from file have been executed unless interactive mode has been explicitly selected.

2016-06-07 Hanna Knutsson <hanna_k@fmgirl.com>

	* Do not check if exchange rates is up to date when using currencies with fixed exchange rate (currencies replaced by euro)
	* Warn about old exchange rates again after one week if the application has not been restarted (Calculator object not recreated) 
	* Make sure precision and if approximate is not lost from units, functions and variables
	* Update physical constants from CODATA Recommended Values 2014
	* Fix unit precision from definitions

2016-06-03 Hanna Knutsson <hanna_k@fmgirl.com>

	* sqrt(7/4) = sqrt(7)/2, sqrt(2)/2−(1/sqrt(2)) equals exactly zero

2016-05-27 Hanna Knutsson <hanna_k@fmgirl.com>
	
	* Allow special "to" commands directly in expression
	* New "to" commands: factors and fraction
	* Fix segmentation fault when aborting non-interactive qalc (do not use readline)

2016-05-26 Hanna Knutsson <hanna_k@fmgirl.com>

	* to bin, oct, hex, bases commands in qalc

2016-05-25 Hanna Knutsson <hanna_k@fmgirl.com>

	* Use ? or 0 in front of unit expression to control if missing prefix should be set

2016-05-24 Hanna Knutsson <hanna_k@fmgirl.com>

	* Use MULTIPLICATION_SIGN_X by default
	* Use prefix for more units, add centigrades name for celsius, add Dalton unit and move units to new Atomic Mass category

2016-05-23 Hanna Knutsson <hanna_k@fmgirl.com>

	* Add unicode signs for powers 0 and 4-9, and cube root

2016-05-20 Hanna Knutsson <hanna_k@fmgirl.com>

	* Redesigned parsing of spaces in multiplication and division and new parse options to ignore whitespace 