@@ -1,3 +1,7 @@
+2016-06-29 Hanna Knutsson <hanna_k@fmgirl.com>
+
+	Fix parsing of "today" and add "tomorrow" and "yesterday"
+
 2016-06-11 Hanna Knutsson <hanna_k@fmgirl.com>
 
 	Show actual number of days since last exchange rates update
